tests/functional/lang/parse-fail-mixed-nested-attrs1.err.exp
error: attribute 'z' already defined at «stdin»:3:16

       at «stdin»:2:3:

            1| {
            2|   x.z = 3;
             |   ^
            3|   x = { y = 3; z = 3; };
